<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context="com.alosatriani.contactosapp.MainActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilNombre">

        <EditText
            android:id="@+id/etNombreContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintNombreCompleto"/>

    </android.support.design.widget.TextInputLayout>


    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dpFhNacimiento"
        android:layout_gravity="center_horizontal"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:spinnersShown="true" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilTelefono">
        <EditText
            android:id="@+id/etTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintTelefono"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilEmail">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintEmail"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilDescripcion">

        <EditText
            android:id="@+id/etDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintDescripcionContacto"
            android:minLines="5"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/miBoton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tituloMain"
        android:text="@string/btnSiguiente"
        android:theme="@style/MiRaisedButtonStyle"
        android:layout_gravity="center_horizontal"
        android:onClick="siguientePagina"/>

</LinearLayout>
